WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255792
Fix useGC option
https://bugs.webkit.org/show_bug.cgi?id=255792
Summary
Fix useGC option
Yijia Huang
Reported
2023-04-21 08:43:36 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-04-21 08:43:53 PDT
<
rdar://problem/108370599
>
Radar WebKit Bug Importer
Comment 2
2023-04-21 08:47:23 PDT
<
rdar://problem/108370700
>
Yijia Huang
Comment 3
2023-04-21 08:50:28 PDT
Not fixed.
Yijia Huang
Comment 4
2023-04-25 17:27:16 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/13183
EWS
Comment 5
2023-04-25 18:50:35 PDT
Committed
263396@main
(ec2049381d4b): <
https://commits.webkit.org/263396@main
> Reviewed commits have been landed. Closing PR #13183 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug