Fix useGC option https://bugs.webkit.org/show_bug.cgi?id=255792 rdar://108370700

Reviewed by Yusuke Suzuki.

Fix `useGC` option by forcing to disable any GC activities.

* Source/JavaScriptCore/heap/Heap.cpp:
(JSC::Heap::sweepSynchronously):
(JSC::Heap::collect):
(JSC::Heap::collectNow):
(JSC::Heap::collectAsync):
(JSC::Heap::collectSync):
(JSC::Heap::notifyIsSafeToCollect):

Canonical link: https://commits.webkit.org/263396@main